@@ -1,3 +1,14 @@
+2007-05-20  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Handle CRLF line endings in source files.
+
+	* mcsource.c: Add numerous additional comments.
+	(mc_source): Add `last_char' local variable; use it to implement
+	one character look ahead, to suppress emission of extraneous CRs
+	into the compiled message text, when immediately followed by LF.
+	(mc_workspace_wanted, mc_update_workspace): Mark as `inline'.
+	(mc_add_escape): Mark as `inline'.
+
 2007-05-17  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	* mcsource.c (mc_source): Adjust block nesting to correct logic
